--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,25 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Play Me | Play Multiplayer Games with Friends</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="app/assets/stylesheets/home.css">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
+
+</head>
+
+<body>
+  <div class="container">
+    <span class="description" align="center"> Simple games with friends </span>
+  </div>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
