--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,3 +1,12 @@
+#gameCanvas {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 250px;
+  margin: auto;
+}
+
 .container {
   font-family: 'Source Sans Pro', sans-serif;
 
