css and js for lobby player list

--- a/app/views/lobbies/show.html.erb
+++ b/app/views/lobbies/show.html.erb
@@ -55,7 +55,7 @@
       </div>
     </section>
   </div>
-  <div class = "users" style="position: fixed; top: 0px; left:0px;">
+  <div class = "users userbox" style="position: fixed; top: 0px; left:0px;">
     <form id = "my_name">
       <input id="name" type="text" name="name" />
     </form>
