--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -13,6 +13,42 @@
   margin: auto;
 }
 
+/* User List */
+
+.userbox {
+    border: 2px solid #73AD21;
+
+    float: left;
+	margin: 1%;
+	padding: 0;
+	position: relative;
+	height: 25vh;
+	width: 30%;
+	border-radius: 10px;
+	border-width: 3px;
+}
+
+.titlerow {
+	font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #3399FF;
+
+	text-align: center;
+	padding-bottom: 20px;
+	font-weight: bold;
+	font-size: 1.25em;
+}
+
+.leftuser {
+	float: left;
+	padding-right: 10px;
+}
+
+.rightuser {
+	float: right;
+}
+
+/* End User List */
+
 .imgContainer {
   float: left;
 }
@@ -57,9 +93,9 @@
 .content {
 	font-size: 150%;
 	padding: 1.5em 0 0 0;
-  margin: 0 auto;
-  text-align: center;
-  overflow: hidden;
+	margin: 0 auto;
+	text-align: center;
+	overflow: hidden;
 }
 
 .input {
