Add player_index to session

--- a/app/views/lobbies/show.html.erb
+++ b/app/views/lobbies/show.html.erb
@@ -80,12 +80,20 @@
   <script type="text/javascript" src="/faye.js"></script>
   <script type="text/javascript">
     // document.getElementById("roomLink").value = document.location.href; // automatically adds lobby url to text box
+    // lobby meta data
     var client = new Faye.Client('/faye');
     var players = JSON.parse('<%= players_json.html_safe %>');
-    console.log("players", players);
-    var data = {"lobbyName": "<%= @lobby.name %>", "players": players, "userId": <%= current_session.id %>, "username": "<%= current_session.username %>"};
+    var data = {"lobbyName": "<%= @lobby.name %>", "players": players, "userId": <%= current_session.id %>, "username": "<%= current_session.username %>", "playerIndex": <%= current_session.player_index %>};
     var meta = new Meta(client, data);
-    var lobbyChat = new Chat("<%= @lobby.name %>", meta,  client);
+
+    // chat
+    var lobbyChat = new Chat(meta,  client);
+
+    //game
+    var canvas = document.getElementById("gameCanvas");
+    var ctx = canvas.getContext("2d");
+    var game = new PongGame(1, 3, 225, "#eee", canvas, ctx, meta, client);
+
   </script>
 </body>
 </html>
