update home page stylesheet links

--- a/app/views/lobbies/new.html.erb
+++ b/app/views/lobbies/new.html.erb
@@ -9,8 +9,8 @@
   <meta name="author" content="Andy Yu">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="app/assets/stylesheets/home.css">
-  <link rel="stylesheet" href="app/assets/stylesheets/normalize.css" />
+  <%= stylesheet_link_tag "home" %>
+  <%= stylesheet_link_tag "normalize" %>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
