changed nickname button text

--- a/app/views/lobbies/show.html.erb
+++ b/app/views/lobbies/show.html.erb
@@ -55,7 +55,7 @@
       </div>
     </section>
   </div>
-  <button id="readyButton" class="readyButton" value="ready"> I m redy! </button>
+  <button id="readyButton" class="readyButton" value="ready"> Ready? </button>
   <canvas id="gameCanvas" width="720" height="480"></canvas>
   <div class="users" style="position: fixed; top: 0px; left:0px;">
     <form id="my_name" class="nameform">
