--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,11 +1,10 @@
 #gameCanvas {
-  border: 5px solid gray;
-  position: absolute;
-top: 200px;
-left: 0;
-right: 100px;
-border: 5px solid gray;
-margin: auto;
+	border: 5px solid gray;
+	position: absolute;
+	top: 200px;
+	left: 0;
+	right: 100px;
+	margin: auto;
 }
 
 .container {
@@ -18,7 +17,6 @@ margin: auto;
   top: 200px;
   left: 0;
   right: 100px;
-  border: 5px solid gray;
 
   margin: auto;
 }
@@ -71,6 +69,10 @@ ul#others {
 	font-size: 20px;
 }
 
+#roomLink {
+	width:70%;
+}
+
 ::-webkit-input-placeholder {
    text-align: center;
 }
@@ -113,11 +115,14 @@ ul#others {
 }
 
 
-.nameform {
-	border:1px solid #E4E4E4;
-    background: #F7F7F7;
+#name {
+	border: 2px solid #eee; 
+	text-align:center;
 }
 
+#name:focus{
+	border: 2px solid black; 
+}
 .crownstyle {
 	width: 15px;
 	height: 15px;
