--- a/app/views/lobbies/show.html.erb
+++ b/app/views/lobbies/show.html.erb
@@ -24,12 +24,15 @@
   <div class="headContainer">
       <div class="lobbyInfo">
         <h1>Lobby <span style= "color:#3399FF"><%= @lobby.name %></span> </h1>
-        <div id="inviteLink"><span align="center">Invite anyone by sharing this link: <input id="roomLink" type="text" onclick="this.select()"/></span></div>
+        <div id="inviteLink">
+          <span align="center">Invite anyone by sharing this link:</span>
+          <div style="margin-top:10px;"> <input id="roomLink" type="text" onclick="this.select()" /></div>
+        </div>
       </div>
       <div class = "users userbox">
         <div class="changeName">
           <form id = "my_name">
-            <input id="name" type="text" name="name" placeholder="Your Name" style="border: 2px solid black; text-align:center;" />
+            <input id="name" type="text" name="name" placeholder="Your Name" />
           </form>         
           <button id="readyButton" class="readyButton" value="ready"> Ready? </button>
 
