join page styling

--- a/app/views/lobbies/lobby_full.html.erb
+++ b/app/views/lobbies/lobby_full.html.erb
@@ -46,7 +46,7 @@
   <div class="headContainer">
       <div class = "users userbox">
         <div class="changeName">
-        	<h1 style="text-align: center;"> Hi! </h1>
+        	<h1 style="text-align: center;"> Lobby Full </h1>
 			<%= form_tag url_for(:controller => 'lobbies', :action => 'show'), :method => 'post' do %>
 	            <input id="name" type="text" name="username" placeholder="What's your name?" />
 			  <%= submit_tag 'Join Lobby' , :id => "submit_tag"%>
