--- a/app/views/lobbies/show.html
+++ b/app/views/lobbies/show.html
@@ -9,33 +9,12 @@
   <meta name="author" content="Andy Yu">
 
   <!-- Styles -->
-  <%= stylesheet_link_tag "home" %>
+  <!--<%= stylesheet_link_tag "home" %>
   <%= stylesheet_link_tag "normalize" %>
+  <%= stylesheet_link_tag "name" %>-->
 
-<style type="text/css">
-	#submit_tag {
-		border: 2px solid #d1d1e0;
-		background-color: #e0e0eb;
-		border-color: none;
-		color: black;
-		border-radius: 5px;
-		position:relative;
-		width: 50%;
-		margin: 0 25%;
-		margin-top: 10px;
-	}
-
-	#username {
-		width: 100%;
-		border: 2px solid #eee; 
-		text-align:center;
-	}
-
-	#username:focus{
-		border: 2px solid black; 
-	}
-
-</style>
+  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="name.css">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
@@ -44,20 +23,20 @@
 </head>
 <body>
   <div class="headContainer">
+      <div class="lobbyInfo">
+        <h1>Lobby <span style= "color:#3399FF"><%= @lobby.name %></span> </h1>
+        <div id="inviteLink">
+          <span align="center">Invite anyone by sharing this link:</span>
+          <div style="margin-top:10px;"> <input id="roomLink" type="text" onclick="this.select()" /></div>
+        </div>
+      </div>
       <div class = "users userbox">
         <div class="changeName">
-        	<h1 style="text-align: center;"> Hi! </h1>
-			<%= form_tag url_for(:controller => 'lobbies', :action => 'show'), :method => 'post' do %>
-	            <input id="name" type="text" name="username" placeholder="What's your name?" />
-			  <%= submit_tag 'Join Lobby' , :id => "submit_tag"%>
-			<% end %>
-		
-		<!--
           <form id = "my_name">
             <input id="name" type="text" name="name" placeholder="What's your name?" />
           </form>         
           <button id="readyButton" class="readyButton" value="go"> Ready? </button>
-		-->
+
         </div>
       </div>
   </div>
