--- a/app/views/lobbies/show.html.erb
+++ b/app/views/lobbies/show.html.erb
@@ -32,7 +32,7 @@
       <div class = "users userbox">
         <div class="changeName">
           <form id = "my_name">
-            <input id="name" type="text" name="name" placeholder="Your Name" />
+            <input id="name" type="text" name="name" value="<%= current_session.username %>" />
           </form>
           <button id="readyButton" class="readyButton" value="ready"> Ready? </button>
 
